--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "@vimeo/player": "^2.10.0"
+        "@vimeo/player": "^2.10.0",
+        "sweetalert": "^2.1.2"
     }
 }
